# Drug-Discovery-Pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
configs/: default.yaml
data/bcl2_senolytic/: bcl2_curated.csv  bcl2_labeled.csv  bcl2_qsar_ready.csv  bcl2_ranked.csv  bcl2_raw_chembl.csv  bcl2_rf_model.joblib  generated_brics.csv  generated_mutants.csv  novel_candidates.csv  seeds_top20.csv  top10_3d_safe.csv
data/bcl2_senolytic/docking_results/: 6O0K.pdbqt  admet_all_candidates.csv  admet_summary.json  docking_results.csv  study_report.json
data/bcl2_senolytic/model_comparison/: best_model.joblib  comparison.csv
data/bcl2_senolytic/prepared_3d/: 24f6dd65_3d.sdf  28391cba_3d.sdf  3216851f_3d.sdf  573c1888_3d.sdf  59ffab2e_3d.sdf  612977b9_3d.sdf  cb036808_3d.sdf  db01d7a5_3d.sdf  e040a436_3d.sdf  e0884cd1_3d.sdf
data/bcl2_senolytic/profile/: results.csv
data/bcl2_senolytic/research_report/: candidates_full.csv  candidates_top50.csv  model_comparison.csv  summary.txt  training_data_stats.csv
data/sample/: sample_molecules.csv  sample_molecules.smi
scripts/: bcl2_docking_study.py
src/claudedd/: __init__.py  __main__.py
src/claudedd/cli/: analyze_commands.py  benchmark_commands.py  data_commands.py  dock_commands.py  generate_commands.py  main.py  model_commands.py  pipeline_commands.py  screen_commands.py  viz_commands.py  workflow_commands.py
src/claudedd/core/: config.py  models.py  (+2 more)
src/drugflow/: __init__.py  __main__.py
tests/: conftest.py
tests/test_cli/: test_admet_commands.py  test_commands.py
tests/test_core/: test_models.py
(+246 files in other folders)
